--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit==1.23.1
-pandas==1.5.3
-plotly==5.14.1
-wordcloud==1.8.2.2
-matplotlib==3.7.2
-numpy==1.24.2
+streamlit
+pandas
+plotly
+wordcloud
+matplotlib
+numpy
 googletrans==4.0.0rc1
-nltk==3.8.1
+nltk
+kaleido
